--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         </div>
                       </div>
                 </div>
-                <!-- <div class="col-md-4 mb-3">
+                <div class="col-md-4 mb-3">
                     <div class="card" style="width: 18rem;">
                         <img src="img/portfolio/detail Produk.png" class="card-img-top" alt="Website E-commerce">
                         <div class="card-body">
@@ -144,7 +144,7 @@
                           </p>
                         </div>
                       </div>
-                </div> -->
+                </div>
             </div>
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,128L40,133.3C80,139,160,149,240,144C320,139,400,117,480,133.3C560,149,640,203,720,197.3C800,192,880,128,960,122.7C1040,117,1120,171,1200,170.7C1280,171,1360,117,1400,90.7L1440,64L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
