--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </div>
                 <div class="col-md-4 mb-3">
                     <div class="card" style="width: 18rem;">
-                        <img src="img/portfolio/figmatravel.png" class="card-img-top" alt="Design UI">
+                        <img src="img/portfolio/Travel.png" class="card-img-top" alt="Design UI">
                         <div class="card-body">
                           <p class="card-text">
                             <h5>Design UI Travel App</h5>
@@ -136,13 +136,16 @@
                 <div class="card mb-3" style="max-width: 540px;">
                   <div class="row g-0">
                     <div class="col-md-4">
-                      <img src="..." class="img-fluid rounded-start" alt="...">
+                      <img src="img/portfolio/Travel.png" class="img-fluid rounded-start" alt="Design ui">
                     </div>
                     <div class="col-md-8">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <h5 class="card-title">Design UI Travel App</h5>
+                        <p class="card-text">Ini merupakan implementasi Design UI pertama saya setelah mengikuti kelas Online 
+                          di Build With Angga (BWA). Melalui kursus ini, saya juga telah memperluas pemahaman saya tentang desain responsif,
+                           yaitu memastikan tampilan desain yang konsisten dan sesuai dengan berbagai perangkat dan ukuran layar. 
+                           Saya telah belajar tentang teknik penyesuaian desain untuk berbagai perangkat, serta penggunaan komponen yang 
+                           fleksibel untuk memudahkan pengembangan antarmuka pengguna yang responsif.</p> <a href="https://drive.google.com/file/d/1ViUxiQQBa_kB7npTLbuy0DmmkbSTAfOK/view?usp=sharing" target="_blank">Project Link</a>
                       </div>
                     </div>
                   </div>
