--- a/index.html
+++ b/index.html
@@ -133,6 +133,34 @@
                       </div>
                 </div>
 
+
+                <div class="card mb-3" style="max-width: 900px;">
+                  <div class="row g-0">
+                    <div class="col-md-4">
+                      <img src="img/portfolio/detail Produk.png" class="img-fluid rounded-start" alt="Website E-commerce">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Website Sparepart Sepeda Motor Classic</h5>
+                        <p class="card-text">Ini Adalah Tugas Akhir skripsi Saya, membuat Website E-commerce sparepart sepeda motor classic
+                          menggunakan framework laravel dengan integrasi API Midtrans payment gateway sebagai pembayaran 
+                          dan integrasi Rajaongkir untuk mengecek ongkos kirim. Melalui proyek ini, saya telah mendapatkan 
+                          pengalaman berharga dalam mengembangkan solusi end-to-end untuk sebuah platform E-commerce. 
+                          Saya terlibat dalam proses pengembangan front-end, di mana saya merancang antarmuka pengguna yang menarik dan 
+                          responsif menggunakan teknologi seperti HTML, CSS, dan JavaScript.
+                          Selain itu, saya juga terlibat dalam pengembangan back-end, di mana saya menggunakan framework Laravel untuk 
+                          mengatur logika bisnis, mengelola basis data, serta mengimplementasikan fitur-fitur seperti manajemen produk, 
+                          keranjang belanja, dan sistem pembayaran menggunakan Midtrans.
+                          Selama proses pengembangan, saya juga mengintegrasikan API Rajaongkir untuk memudahkan pengguna dalam mengecek 
+                          ongkos kirim dengan cepat dan akurat. Hal ini memungkinkan pelanggan untuk mendapatkan perkiraan biaya pengiriman 
+                          secara real-time dan memilih opsi yang paling sesuai. <a href="https://github.com/ahmadmuhyiii/aplikasicms" target="_blank">Project Link</a>
+                        </p>                      
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+
                 <div class="card mb-3" style="max-width: 900px;">
                   <div class="row g-0">
                     <div class="col-md-4">
