--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-md mb-3">
+                <div class="col mb-3">
                     
                 
 
