--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                       <div class="col-md-4">
                         <img src="img/portfolio/detail Produk.png" class="img-fluid rounded-start" alt="Website E-commerce">
                       </div>
-                      <div class="col">
+                      <div class="col-md-8">
                         <div class="card-body">
                           <h5 class="card-title">Website Sparepart Sepeda Motor Classic</h5>
                           <p class="card-text">Ini Adalah Tugas Akhir skripsi Saya, membuat Website E-commerce sparepart sepeda motor classic
