--- a/index.html
+++ b/index.html
@@ -141,6 +141,22 @@
                   </div>
                 </div>
 
+                 <div class="card mb-3" style="max-width: 900px;">
+                  <div class="row g-0">
+                    <div class="col-md-4">
+                      <img src="img/portfolio/kopi.png" class="img-fluid rounded-start" alt="Design ui">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Design UI Kopi App</h5>
+                        <p class="card-text">Ini merupakan implementasi Design UI Kedua saya. 
+                           Saya telah belajar tentang teknik penyesuaian desain untuk berbagai perangkat, serta penggunaan komponen yang 
+                           fleksibel untuk memudahkan pengembangan antarmuka pengguna yang responsif.</p> <a href="https://drive.google.com/file/d/1eFppzS81_gGKXpLNC0idavbkLnNMRucp/view?usp=sharing" target="_blank">Project Link</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
 
               </div>
             </div>
